// Test extensions for the Tardigrade runtime wrapper.

syntax = "proto3";

package tardigrade.v0;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "tardigrade/v0/types.proto";

// Test extensions for the Tardigrade runtime.
service TestService {
  // Sets the current time for the runtime.
  rpc SetTime(google.protobuf.Timestamp) returns (google.protobuf.Empty) {}
}
